TWA Footer fix 2

--- a/mainsite/templates/twa_base.html
+++ b/mainsite/templates/twa_base.html
@@ -177,8 +177,8 @@
                     </div>
                     <div class="col-md-2">
                         <h3>UTILITY</h3>
-                        <p><a href="https://www.spe.org/en/twa/archives/twa/about-twa/">About</a></p>
-                        <p><a href="https://www.spe.org/en/twa/archives/twa/twa-editorial-board/">TWA Editorial Board</a></p>
+                        <p><a href="https://www.spe.org/en/twa/about-twa/">About</a></p>
+                        <p><a href="https://www.spe.org/en/twa/twa-editorial-board/">TWA Editorial Board</a></p>
                         <p><a href="https://www.spe.org/en/twa/contact/">Contact</a></p>
                         <p><a href="https://www.spe.org/en/twa/advertise/">Advertise</a></p>
                     </div>
