--- a/mainsite/static/twa/css/_adzones.scss
+++ b/mainsite/static/twa/css/_adzones.scss
@@ -13,10 +13,10 @@
 }
 
 .tile-adspeed {
-  box-shadow:           0 1px 2px $col-boxshadow;
+  //box-shadow:           0 1px 2px $col-boxshadow;
   margin-bottom:        20px;
   padding:              15px;
-  background-color:     $col-lightgrey;
+  //background-color:     $col-lightgrey;
 }
 
 /* AD Zone1 */
