--- a/mainsite/static/jpt/css/mainstyle.css
+++ b/mainsite/static/jpt/css/mainstyle.css
@@ -368,7 +368,7 @@ table th, table td { padding: 5px; }
 /* VARIABLES
 ====================================================================== */
 /* Images */
-.tiletitlehr { display: none; }
+.tiletitlehr { border-top: 5px solid #e2e2e2; }
 
 .topictitles { color: #3d4044; border-bottom: 1px dotted grey; padding-bottom: 10px; margin-bottom: 15px; }
 
@@ -519,7 +519,7 @@ table th, table td { padding: 5px; }
 .becomeMember a { color: #fffb22; font-weight: 700; }
 .becomeMember a:hover { color: #2a2a2a; }
 
-.detailImgWrap, .detailImgWrapFull, .detailImgWrapLeft, .detailImgWrapSide, .poipic, .bestshotpic { overflow: hidden; -webkit-background-size: cover; background-size: cover; background-position: center; }
+.detailImgWrap, .detailImgWrapFull, .detailImgWrapLeft, .detailImgWrapSide, .poipic, .bestshotpic { overflow: hidden; -webkit-background-size: cover; background-size: cover; background-position: center; border: 1px solid #e2e2e2; }
 
 .detailImgWrap { height: 250px; margin-bottom: 5px; }
 
