--- a/mainsite/templates/twa_base.html
+++ b/mainsite/templates/twa_base.html
@@ -99,8 +99,8 @@
                 <div class="row">
                     <nav class="col-xs-12 navbar yamm navbar-default text-right" role="navigation">
                         <ul class="nav navbar-nav">
-                            <li><a href="https://djangoprod.spe.org/en/twa/about-twa/">About TWA</a></li>
-                            <li><a href="https://djangoprod.spe.org/en/twa/twa-editorial-board/">TWA Editorial Board</a></li>
+                            <li><a href="https://www.spe.org/en/twa/about-twa/">About TWA</a></li>
+                            <li><a href="https://www.spe.org/en/twa/twa-editorial-board/">TWA Editorial Board</a></li>
                             <li><a href="https://www.spe.org/en/twa/contact/">Contact TWA</a></li>
                             <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Departments</a>
                                 <ul class="dropdown-menu">
