--- a/mainsite/static/www/css/_vars.scss
+++ b/mainsite/static/www/css/_vars.scss
@@ -3,6 +3,7 @@ $col-white:       white;
 $col-red:         red;
 $col-redtext:     #c63604;
 $col-yellow:      #FDD017;
+$col-greenbar:    #9fcf67;
 
 /* greys */
 $col-darkgrey:    #37373a;
@@ -32,6 +33,8 @@ $col-lInShare:    #007BB5;
 $col-twitShare:   #00ACED;
 
 /* Fonts */
+$font-main:       'Open Sans', sans-serif;
+
 $font-thin:       100;
 $font-light:      300;
 $font-regular:    400;
