--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -7,7 +7,7 @@
   background-color:     $col-white;
 }
 
-.tile, .tile-blue, .tile-lightblue, .tile-white, .tile-alert{
+.tile, .tile-blue, .tile-lightblue, .tile-white, .tile-greenbar, .tile-alert {
   box-shadow:           0 1px 2px $col-boxshadow;
   margin-bottom:        20px;
   padding:              15px;
@@ -96,6 +96,14 @@
     color:              $col-white;
   }
 
+}
+.tile-greenbar {
+    background-color:   $col-white;
+      border-top: 4px solid $col-greenbar;
+}
+.tile-bluebar {
+    background-color:   $col-white;
+      border-top: 4px solid $col-speblue2;
 }
 .whiteFade {
   background:           $img-back-white-75 repeat top left fixed;
