--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -12,7 +12,8 @@
 @import 'vars';
 
 body {
-    font-family:          'Open Sans', sans-serif;
+    font-family:            $font-main;
+  //font-size:              14px !important;
     background-color:     $col-pagegrey;
 }
 * {
