--- a/mainsite/templates/www_3col.html
+++ b/mainsite/templates/www_3col.html
@@ -4,21 +4,22 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
+    <div class="container">
     <div class="row content-area">
 
-        <div class="col-sm-7 col-sm-push-4 col-md-push-3 col-md-6 homepage-features">
+        <div class="col-sm-8 col-sm-push-4 col-md-push-3 col-md-6 homepage-features">
 
             {% placeholder "notice" %}
             {% placeholder "content" %}
 
         </div>
-        <div class="col-sm-3 col-sm-offset-1 col-sm-pull-7 col-md-2 col-md-pull-6" id="notices-ads">
+        <div class="col-sm-4 col-sm-pull-8 col-md-3 col-md-pull-6" id="notices-ads">
 
             {% placeholder "aside" %}
 
         </div>
 
-        <div class="col-sm-10 col-sm-offset-1 col-md-2 col-md-offset-0 spe-content">
+        <div class="col-sm-10 col-md-3 col-md-offset-0 spe-content">
 
             {% placeholder "additional-content" %}
 
@@ -26,5 +27,5 @@
     </div>
 
     {% include 'z_boostrap_size_indicator.html' %}
-
+    </div><!-- end container -->
 {% endblock content %}
