--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -12,6 +12,8 @@
   margin-bottom:        20px;
   padding:              15px;
   min-width:            150px;
+  z-index:              100;
+  position:             relative;
 }
 .tile-alert {
   background-color:     $col-redtext;
@@ -240,20 +242,28 @@
   }
 
 }
+.tiletitlerow {
+  z-index:              9999;
+  position:             relative;
+  text-align:           center;
+}
 .tiletitlehr {
-  margin-top:           0;
-  height:               1px;
-  border:               none;
-  color:                $col-speblue;
-  background-color:     $col-speblue;
+  display:              none;
+  //margin-top:           0;
+  //height:               1px;
+  //border:               none;
+  //color:                $col-speblue;
+  //background-color:     $col-speblue;
 }
 .tiletitles {
-  color:                $col-copygrey;
-  font-size:            25px;
-  border-bottom:        1px dotted $col-medgrey;
-  padding-bottom:       10px;
-  margin-bottom:        15px;
+  color:                $col-white;
+  background:           $col-bluegrey;
+  font-size:            20px;
+  padding:              10px;
+  margin:               0 auto -30px auto;
+  //margin-bottom:        -30px;
   font-weight:          $font-bold;
+  display:              inline-block;
 }
 .tileDate {
   font-weight:          $font-bold;
