--- a/mainsite/templates/plugins/title_plugin.html
+++ b/mainsite/templates/plugins/title_plugin.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row tiletitlerow">
     <hr class="tiletitlehr">
     <h2 class="tiletitles">{{ title }}</h2>
 </div>
