--- a/mainsite/templates/plugins/tile_img_back.html
+++ b/mainsite/templates/plugins/tile_img_back.html
@@ -2,7 +2,7 @@
     <a href="{{ link }}" target="_blank">
         <div class="tileImgBack" style="background-image: url('{{ image.url }}')">
             <div class="whiteFade">
-                <div class="tiletitles">{{ title }}</div>
+                <div class="boxtitles">{{ title }}</div>
                 <div class="tileDate">{{ date | date:"d F Y" }}</div>
                 <div class="tileText">{{ text | safe }}</div>
             </div>
