--- a/mainsite/templates/www_3col.html
+++ b/mainsite/templates/www_3col.html
@@ -4,7 +4,7 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
-    <div class="container">
+    <div class="container-fluid">
     <div class="row content-area">
 
         <div class="col-sm-8 col-sm-push-4 col-md-push-3 col-md-6 homepage-features">
