--- a/spe_blog/templates/spe_blog/plugins/side_list.html
+++ b/spe_blog/templates/spe_blog/plugins/side_list.html
@@ -1,9 +1,10 @@
 {% load i18n cms_tags sekizai_tags %}
-
+{#<p>Publication: {{ pubcode }}</p>#}
 <div class="tile-editorial {% if fixedheight %}tile-editorial-fixed{% endif %} {% if whitetext %}tile-editorial-txtwht{% else %}tile-editorial-txtblck{% endif %} row" style="background-color:{{ backcol }}; {% if isbrief == True %}margin-left:10px;padding-left: 10px;{% endif %}">
 {#    <p>Back Color: {{ backcol }}</p>#}
 {#    <p>White Text: {{ whitetext }}</p>#}
 {#    <p>Publication: {{ pubcode }}</p>#}
+
     {% if pubcode == "TWA" %}
         {% if isbrief == True %}
             <div class="spacer10px"></div>
@@ -13,6 +14,7 @@
             </div>
         {% endif %}
     {% endif %}
+
 {% for article in articles %}
 {#    <div class="row">#}
         <div class="row sideListItem">
@@ -27,6 +29,8 @@
             <span class="sideListTitleTWA"><a href={{ article.get_absolute_url}}>{{ article.title }}</a></span><br>
         {% else %}
             <div class="col-xs-12">
+            <div>
+
             <span class="sideListTitle"><a href={{ article.get_absolute_url}}>{{ article.title|truncatewords:10 }}</a></span><br>
         {% endif %}
 
@@ -35,9 +39,11 @@
 {#            <span class="sideListAuthor">{{ article.author }}</span>#}
         {% else %}
             {% if article.is_readable == True %}
-                | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
+                <span class="pipe">| </span><span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
             {% endif %}
         {% endif %}
+    
+            </div>
             </div>
         </div>
 {#    </div>#}
