--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -81,7 +81,7 @@ a {
   //line-height:          18px;
 
   a {
-    color:              $col-darkgrey;
+    //color:              $col-darkgrey;
     margin:             20px 0;
     //margin:               10px 0 10px 0;
     //padding:              10px 0 10px 0;
