--- a/mainsite/static/www/css/mainstyle.css
+++ b/mainsite/static/www/css/mainstyle.css
@@ -417,5 +417,5 @@ a:hover { text-decoration: none; }
 .tile-editorial .row { margin: 10px 0; padding-bottom: 10px; border-bottom: 1px solid #f1f2f7; }
 
 .sideListTitle { font-size: 14px; }
-.sideListTitle a { color: #57575a; margin: 20px 0; }
+.sideListTitle a { margin: 20px 0; }
 .sideListTitle a:hover { color: #365d98; }
