--- a/mainsite/templates/jpt_home.html
+++ b/mainsite/templates/jpt_home.html
@@ -10,7 +10,6 @@
         </div>
     </div>
     <div class="row content-area">
-
         <div class="col-xs-12 col-sm-8 col-lg-7 col-lg-offset-1 featurecol">
             {% placeholder "feature" %}
         </div>
@@ -21,7 +20,6 @@
         <div class="col-xs-12 adZone2 text-center" id="adZone2">
             {% placeholder "ad zone 2" %}
         </div>
-
     </div>
     <div class="row content-area">
         <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
@@ -35,6 +33,6 @@
         </div>
     </div>
 
-    {% include 'include_hide_ads.html' %}
+{#    {% include 'include_hide_ads.html' %}#}
 
 {% endblock content %}
