JPT WWW TWA Refixes

--- a/mainsite/static/jpt/css/_content.scss
+++ b/mainsite/static/jpt/css/_content.scss
@@ -606,9 +606,11 @@
 }
 .areaContent {
   padding-right:        15px;
+  padding-left:         10px;
 }
 .areaRightSide {
   padding-left:         15px;
+  padding-right:        10px;
 }
 .issuebar {
     cursor:             pointer;
