--- a/mainsite/static/jpt/css/mainstyle.scss
+++ b/mainsite/static/jpt/css/mainstyle.scss
@@ -36,8 +36,10 @@ h2 {
   padding:                0;
 }
 a {
+  color:                  $col-speblue2;
   &:hover {
     text-decoration:      none;
+    color:                $col-basegrey;
   }
 }
 .dummyClass {
