--- a/mainsite/static/twa/css/mainstyle.scss
+++ b/mainsite/static/twa/css/mainstyle.scss
@@ -19,9 +19,11 @@ h1, h2, h3, h4 {
 }
 h3 {
   font-size:              20px;
+  margin-top:             0;
 }
 h2 {
   font-size:              16px;
+  margin-top:             10px;
 }
 * {
   -webkit-border-radius:  0 !important;
