Titles & Carousel Fixes

--- a/mainsite/static/jpt/css/_header.scss
+++ b/mainsite/static/jpt/css/_header.scss
@@ -94,6 +94,10 @@
 
 /* ********************************** */
 /* LOGO MENU BAR GREY                 */
+.logoRow {
+  padding: 0 15px;
+}
+
 #menubar {
   background-color:     $col-lightgrey;
   //min-height:           125px;
