--- a/mainsite/static/jpt/css/mainstyle.css
+++ b/mainsite/static/jpt/css/mainstyle.css
@@ -55,6 +55,8 @@ a:hover { text-decoration: none; color: grey; }
 
 /* ********************************** */
 /* LOGO MENU BAR GREY                 */
+.logoRow { padding: 0 15px; }
+
 #menubar { background-color: #f2efea; padding-bottom: 20px; }
 #menubar #mainLogo { padding-top: 20px; }
 #menubar .pubMenu { font-family: "Rajdhani", sans-serif; list-style-type: none; margin: 0 0 20px 0; padding: 50px 0 0 0; font-size: 18px; float: right; }
