--- a/mainsite/templates/jpt_base.html
+++ b/mainsite/templates/jpt_base.html
@@ -64,12 +64,12 @@
         </div>
 
         <div class="row dontPrintMe" id="menubar">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-3 col-md-2" id="mainLogo">
+            <div class="container-liquid">
+                <div class="row logoRow">
+                    <div class="col-xs-6 col-sm-3 col-md-2 col-lg-2 col-lg-offset-1" id="mainLogo">
                         <a href="/twa/twa-main-page/"><img src="{% static 'jpt/img/JPT_wText_Vertical.svg' %}" class="img-responsive"></a>
                     </div>
-                    <div class="col-md-9 text-right">
+                    <div class="col-md-10 col-lg-8 text-right">
                         <ul class="pubMenu">
                             {% show_menu 1 100 0 1 %}
                             <li class="searchIcon"><a role="button" data-toggle="collapse" href="#collapseSearch" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-search"></i></a></li>
