Changed varialble name from customer to visitor so it makes more sense.  Also, added the ability to have staff "become" another id like dev an qa.

--- a/mainsite/templates/www_base.html
+++ b/mainsite/templates/www_base.html
@@ -376,7 +376,7 @@
 
             {% if login.authenticated == True %}
                 <div class="col-xs-10 col-xs-offset-0 col-sm-4 welcomemsg text-right">
-                    Welcome, {{visitor.name}}<br><br>
+                    Welcome, {{visitor.greeting}}<br><br>
                     <a class="update_profile" href="/ams/Custom/CustomerProfile.aspx">My profile</a>
                 </div>
             {% else %}
