--- a/mainsite/static/jpt/css/_header.scss
+++ b/mainsite/static/jpt/css/_header.scss
@@ -107,7 +107,7 @@
     padding-top:        20px;
 
     img {
-      //max-width:        300px;
+      max-width:        200px;
       //height:           auto;
     }
   }
