--- a/mainsite/templates/jpt_subpage.html
+++ b/mainsite/templates/jpt_subpage.html
@@ -5,9 +5,9 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container-fluid">
     <div class="row content-area">
-        <div class="col-sm-8 areaContent">
+        <div class="col-sm-8 col-lg-offset-1 areaContent">
             {% placeholder "notice" %}
             {% placeholder "page-title" %}
             {% placeholder "content" %}
