--- a/mainsite/templates/www_base.html
+++ b/mainsite/templates/www_base.html
@@ -108,14 +108,14 @@
 
             <!-- Events -->
             <li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Events</a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu" style="/* display: block; */">
                 <li>
                   <div class="yamm-content">
                     <div class="row megarow">
                                 <div class="nav-col col-sm-6 col-md-3">
                                     <a href="http://www.spe.org/events/calendar/"><span class="link-icon events-calendar"></span><span class="link-title">Events Calendar</span></a>
                                     <a href="http://www.spe.org/training/courses.php"><span class="link-icon training-courses"></span><span class="link-title">Training Courses</span></a>
-                                    <a href="https://webevents.spe.org/"><span class="link-icon web-events"></span><span class="link-title">Web Events</span></a>
+                                    <a href="https://webevents.spe.org/"><span class="link-icon web-events"></span><span class="link-title">Webinars</span></a>
                                     <a href="http://www.spe.org/dl/schedule.php" class="last"><span class="link-icon distinguished-lect"></span><span class="link-title">Distinquished Lecturer</span></a>
                                 </div>
                                 <div class="col-xs-12 visible-xs navcolborder"></div>
@@ -251,7 +251,7 @@
                                     </a>
                                     <a href="https://webevents.spe.org/" class="last">
                                         <span class="link-icon web-events"></span>
-                                        <span class="link-text"><span class="link-title">Web Events</span></span>
+                                        <span class="link-text"><span class="link-title">Webinars</span></span>
                                         <div class="clear"></div>
                                     </a>
                                 </div>
