--- a/mainsite/templates/jpt_base.html
+++ b/mainsite/templates/jpt_base.html
@@ -67,7 +67,7 @@
             <div class="container-liquid">
                 <div class="row logoRow">
                     <div class="col-xs-6 col-sm-3 col-md-2 col-lg-2 col-lg-offset-1" id="mainLogo">
-                        <a href="/twa/twa-main-page/"><img src="{% static 'jpt/img/JPT_wText_Vertical.svg' %}" class="img-responsive"></a>
+                        <a href="/jpt/jpt-main-page/"><img src="{% static 'jpt/img/JPT_wText_Vertical.svg' %}" class="img-responsive"></a>
                     </div>
                     <div class="col-md-10 col-lg-8 text-right">
                         <ul class="pubMenu">
