--- a/mainsite/static/www/css/mainstyle.css
+++ b/mainsite/static/www/css/mainstyle.css
@@ -261,7 +261,7 @@ a:hover { text-decoration: none; }
 .tile-alert { background-color: #c63604; color: white; }
 .tile-alert p { margin: 0; }
 
-.tile-blue { background-color: #26416c; color: #a3bce4; }
+.tile-blue { background-color: #26416c; color: #b4b4b9; }
 .tile-blue a { color: #a3bce4; }
 .tile-blue a:hover { color: white; }
 
