--- a/mainsite/templates/jpt_subpage.html
+++ b/mainsite/templates/jpt_subpage.html
@@ -7,7 +7,7 @@
 
 <div class="container-fluid">
     <div class="row content-area">
-        <div class="col-sm-8 col-lg-offset-1 areaContent">
+        <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
             {% placeholder "notice" %}
             {% placeholder "page-title" %}
             {% placeholder "content" %}
